--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^16.0.8",
     "@types/react-redux": "^6.0.9",
     "gh-pages": "^2.0.0",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.1"
   },
   "main": "index.js",
